; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/oslib/extr_osi_freertos.c_VDeleteSimpleLinkSpawnTask.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/oslib/extr_osi_freertos.c_VDeleteSimpleLinkSpawnTask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xSimpleLinkSpawnTaskHndl = common dso_local global i64 0, align 8
@xSimpleLinkSpawnQueue = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VDeleteSimpleLinkSpawnTask() #0 {
  %1 = load i64, i64* @xSimpleLinkSpawnTaskHndl, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* @xSimpleLinkSpawnTaskHndl, align 8
  %5 = call i32 @vTaskDelete(i64 %4)
  store i64 0, i64* @xSimpleLinkSpawnTaskHndl, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i64, i64* @xSimpleLinkSpawnQueue, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i64, i64* @xSimpleLinkSpawnQueue, align 8
  %11 = call i32 @vQueueDelete(i64 %10)
  store i64 0, i64* @xSimpleLinkSpawnQueue, align 8
  br label %12

12:                                               ; preds = %9, %6
  ret void
}

declare dso_local i32 @vTaskDelete(i64) #1

declare dso_local i32 @vQueueDelete(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
